--- a/index.html
+++ b/index.html
@@ -1,6 +1,34 @@
-<html>
+<!-- <html>
     Hello World
     <div style="background-color: red;">
         Omg
     </div>
+</html>
+-->
+
+<html>
+<head>
+    <title>Joshua Llorin - Developer Portfolio</title>
+    <link rel="stylesheet" type="text/css" href="style.css">
+</head>
+<body>
+    <header>
+        <img src="https://i.imgur.com/KvEuBiI.png">
+        <h1>Joshua Llorin</h1>
+        <p>Junior Software Developer</p>
+    </header>
+    <section id="bio">
+        <h2>About Me</h2>
+        <p>BSc Computer Science with User Experience Design Minor @ Wilfrid Laurier University</p>
+    </section>
+    <section id="work">
+        <h2>My Work</h2>
+        <div class="project" id="project1">Project 1</div>
+        <div class="project" id="project2">Project 2</div>
+        <div class="project" id="project3">Project 3</div>
+    </section>
+    <footer>
+        <p>Contact me at joshuamiguel.llorin@gmail.com</p>
+    </footer>
+</body>
 </html>
