--- a/index.html
+++ b/index.html
@@ -1,15 +1,7 @@
-<!-- <html>
-    Hello World
-    <div style="background-color: red;">
-        Omg
-    </div>
-</html>
--->
-
 <html>
 <head>
     <title>Joshua Llorin - Developer Portfolio</title>
-    <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 <body>
     <header>
