--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 </head>
 <body>
     <header>
-        <img src="https://i.imgur.com/KvEuBiI.png">
+        <img src="folder/JoshPic.jpg">
         <h1>Joshua Llorin</h1>
         <p>Junior Software Developer</p>
     </header>
