--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 </head>
 <body>
     <header>
-        <img src="folder/JoshPic.jpg">
+        <img src="https://github.com/M3rchnt/M3rchnt.github.io/blob/main/JoshPic.jpg">
         <h1>Joshua Llorin</h1>
         <p>Junior Software Developer</p>
     </header>
