--- a/index.html
+++ b/index.html
@@ -7,20 +7,24 @@
     <header>
         <img src="https://github.com/M3rchnt/M3rchnt.github.io/blob/main/JoshPic.jpg?raw=true">
         <h1>Joshua Llorin</h1>
-        <p>Junior Software Developer</p>
+        <p>Aspiring Junior Software Developer</p>
     </header>
     <section id="bio">
         <h2>About Me</h2>
         <p>BSc Computer Science with User Experience Design Minor @ Wilfrid Laurier University</p>
     </section>
     <section id="work">
-        <h2>My Work</h2>
-        <div class="project" id="project1">Project 1</div>
-        <div class="project" id="project2">Project 2</div>
-        <div class="project" id="project3">Project 3</div>
+        <h2>My Projects</h2>
+        <div>
+            <div class="project" id="project1"><a href="https://github.com/M3rchnt/Python-Java-Banking-System"> Bank Account Manager</a></div>
+            <div class="project" id="project2"><a href="https://github.com/M3rchnt/Student-Database-Marking-Application">Student Database Marking</a></div>
+            <div class="project" id="project3"><a href="https://github.com/M3rchnt/CSV-WeatherData-Parser">CSV Weather Data Parser</a></div>
+                
+        </div>
     </section>
     <footer>
-        <p>Contact me at joshuamiguel.llorin@gmail.com</p>
+        <p>Contacts: joshuamiguel.llorin@gmail.com | llor9394@mylaurier.ca</p>
+        <p>Linkedin: <a href="https://www.linkedin.com/in/joshua-llorin-574098240/">https://www.linkedin.com/in/joshua-llorin-574098240/</a></p>
     </footer>
 </body>
 </html>
