CSS Change + JS Addition

--- a/index.html
+++ b/index.html
@@ -16,15 +16,18 @@
     <section id="work">
         <h2>My Projects</h2>
         <div>
-            <div class="project" id="project1"><a href="https://github.com/M3rchnt/Python-Java-Banking-System">Bank Account Manager</a></div>
-            <div class="project" id="project2"><a href="https://github.com/M3rchnt/Student-Database-Marking-Application">Student Database Marking</a></div>
-            <div class="project" id="project3"><a href="https://github.com/M3rchnt/CSV-WeatherData-Parser">CSV Weather Data Parser</a></div>
-                
+            <div class="project" id="project1"><a href="https://github.com/M3rchnt/Python-Java-Banking-System">Bank Account Manager</a>
+            </div>
+            <div class="project" id="project2"><a href="https://github.com/M3rchnt/Student-Database-Marking-Application">Student Database Marking</a>
+            </div>
+            <div class="project" id="project3"><a href="https://github.com/M3rchnt/CSV-WeatherData-Parser">CSV Weather Data Parser</a>
+            </div>
         </div>
     </section>
-    <footer>
-        <p>Contacts: joshuamiguel.llorin@gmail.com | llor9394@mylaurier.ca</p>
-        <p>Linkedin: <a href="https://www.linkedin.com/in/joshua-llorin-574098240/">https://www.linkedin.com/in/joshua-llorin-574098240/</a></p>
+    <button class="btn btn-hero" id="btn">Click Me</button>
+    <footer class="socials">
+        <p>Contacts: joshuamiguel.llorin@gmail.com | llor9394@mylaurier.ca | 905-805-5849 | <a href="https://www.linkedin.com/in/joshua-llorin-574098240/">LinkedIn</a> | <a href="https://github.com/M3rchnt">Github</a> </p>
     </footer>
+    <script src="app.js"></script>
 </body>
 </html>
